Panel Group Features
Added title, close, and Auto Hide support.  AutoHide will be in ViewPort
widget.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link type="text/css" rel="stylesheet" href="//cdn.kodingsykosis.com/css/jQuery.ui.ViewPort.css"></link>
         <!--<link type="text/css" rel="stylesheet" href="//cdn.kodingsykosis.com/css/jQuery.ui.panel.css"></link>-->
         <link type="text/css" rel="stylesheet" href="css/jQuery.ui.panel.css"></link>
+        <link type="text/css" rel="stylesheet" href="css/jQuery.ui.PanelGroup.css"></link>
         <link type="text/css" rel="stylesheet" href="css/jqtree.css"></link>
         <link type="text/css" rel="stylesheet" href="css/Example.css"></link>
 
